<resources>
    <string name="app_name">QUIZ</string>
    <string name="start" translatable="false">Sign up</string>

    <!--  My Strings  -->
    <string name="HeadingReg" translatable="false">Welcome Onboard!!</string>
    <string name="paragraphReg" translatable="false">Fill in the text fields</string>
    <string name="titleActivitySecond" translatable="false">Сreating a password</string>
    <string name="question1" translatable="false">In winter and this one color</string>

    <!--  Input Text  -->
    <string name="inputName" translatable="false">what is your name?</string>
    <string name="inputEmail" translatable="false">what is your mail?</string>
    <string name="inputPassword" translatable="false">Enter password</string>
    <string name="repeat_password" translatable="false">Repeat password</string>

    <!--  Button  -->
    <string name="textButton_next" translatable="false">Next</string>
    <string name="textButton_back" translatable="false">Back</string>
    <string name="textForButton_registration" translatable="false">Register</string>
    <string name="titleStartActivity" translatable="false">A quiz is a form of game or mind sport in which players attempt to answer questions correctly on one or several specific topics.</string>
    <string name="welcome_back" translatable="false">Welcome Back!!</string>
    <string name="button_autorization" translatable="false">Sign in</string>
    <string name="don_t_have_an_account_sign_up" translatable="false">Don\'t have an account? Sign up</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="registration" translatable="false">Sign in</string>
    <string name="authorization" translatable="false">Authorization</string>
    <string name="already_have_an_account_sign_in" translatable="false">Already have an account?  Sign in </string>


    <!--  Game activity  -->
    <string name="option1" translatable="false">"onswer "</string>
    <string name="option2" translatable="false">"onswer "</string>
    <string name="option3" translatable="false">"onswer "</string>
    <string name="option4" translatable="false">"onswer "</string>

    <!-- fragment main menu -->
    <string name="mainmenufragment" translatable="false">Welcome Back!!</string>
    <string name="main_menu" translatable="false">Main menu</string>
    <string name="children_s_quiz" translatable="false">Children\'s Quiz</string>
    <string name="button_developing" translatable="false">In developing</string>
    <string name="user" translatable="false">User: </string>
    <string name="finish" translatable="false">Finish</string>
    <string name="quiz_results" translatable="false">QUIZ results</string>
    <string name="correct_answers" translatable="false">Correct answers:</string>
    <string name="result" translatable="false">result</string>
    <string name="wrong_answers" translatable="false">Wrong answers:</string>
    <string name="logo" translatable="false">logo</string>

    <string name="select_date_of_birth" translatable="false">Date of birth</string>

    <string name="select_time" translatable="false">Select time</string>
    <string name="date_selection" translatable="false">date selection</string>


    <plurals name="number_of_correct_answers" translatable="false">
        <item quantity="zero">%1$d of correct answers</item>
        <item quantity="one">%1$d of correct answers</item>
        <item quantity="two">%1$d of correct answers</item>
        <item quantity="few">%1$d of correct answers</item>
        <item quantity="many">%1$d of correct answers</item>
        <item quantity="other">%1$d of correct answers</item>
    </plurals>

    <plurals name="number_of_wrong_answers" translatable="false">
        <item quantity="zero">%1$d of wrong answers</item>
        <item quantity="one">%1$d of wrong answers</item>
        <item quantity="two">%1$d of wrong answers</item>
        <item quantity="few">%1$d of wrong answers</item>
        <item quantity="many">%1$d of wrong answers</item>
        <item quantity="other">%1$d of wrong answers</item>
    </plurals>

</resources>