<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.GameActivity.ResultActivity">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/quiz_results"
      style="@style/textMainStyle"
      android:textSize="25sp"
      android:layout_marginTop="30dp"
    />

  <TextView
      android:id="@+id/p_correct_answers"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title"
      android:layout_marginTop="60dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:text="@string/correct_answers"
    />

  <TextView
      android:id="@+id/resCorrect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@+id/p_correct_answers"
      app:layout_constraintTop_toBottomOf="@+id/title"
      android:layout_marginTop="60dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:text="@string/result"
      />

  <TextView
      android:id="@+id/p_wrong_answers"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/p_correct_answers"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:text="@string/wrong_answers"
      />

  <TextView
      android:id="@+id/resWrong"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toEndOf="@+id/p_wrong_answers"
      app:layout_constraintTop_toBottomOf="@+id/p_correct_answers"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:text="@string/result"
      />

  <Button
      android:id="@+id/buttonFinish"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginRight="30dp"
      android:layout_marginLeft="30dp"
      android:layout_marginBottom="30dp"
      android:text="@string/finish"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>